Added a Summary note and Schema to the GET 1 contact route to meet Rubric API DOCUMENTATION MASTERY requirement.
